style.css
body {
    background: #000;
    color: #fff;
    overflow: hidden;

    font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
    font-weight: normal;
    font-size: 1.60em;
    letter-spacing: .2em;
    line-height: 1.1em;
}

#dotContainer {
    position: absolute;
    top: 10px;
    width: 100%;
    text-align: center;
    font-size: 1.6em;
}

.dot:hover {
    color: #FF9800;
}

.orange {
    color: #FF9800;
}

h2 {
    background-color: #004b80;
    text-align: center;
    margin: 10px;
    font-size: 1.3em;
}

.icons {
    top: 12px;
    left: 30px;
    position: absolute;
}

.icons img {
    height: 21px;
}

.help-text {
    font-size: .5em;
    letter-spacing: .1em;
    top: 13px;
    left: 85px;
    position: absolute;
}

#loading {
    bottom: 3px;
    left: 15px;
    position: absolute;
}

.arrow {
    top: 13px;
    font-size: .8em;
}

.arrow:hover {
    color: #FF9800;
}

#dateUp {
    margin-left: 20px;
}

#imageContainer  {
    top: 50px;
    left: 0;
    right: 0;
    bottom: 0;

    position: fixed;
    display: inline-block;
}

#imageContainer img {
    margin: auto;
    max-height: 100%;
    max-width: 100%;

    display: block;
}


#credits {
    position: absolute;
    right: 10px;
    bottom: 0px;
    font-size: .5em;
    letter-spacing: .1em;
}

.unselectable {
    -o-user-select: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.hidden {
    display: none;
}

.clickable {
    cursor: pointer;
}

a
{
    color: white;
    text-decoration: none;
}

@media screen and (max-width: 670px) {
    body {
	font-size: 1em;
	letter-spacing: .1em;
    }

    .arrow {
	top: 6px;
	font-size: 1.1em;
	position: absolute;
	right: 10px;
    }

    #dateUp {
	margin-left: auto;
	margin-right: 30px;
    }

    .icons {
	top: 6px;
	left: 10px;
    }

    .help-text {
	left: 10px;
	top: 32px;
    }

    h2 {
	margin: auto;
    }
}

